Added Stying to buttons

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,14 @@ code {
   cursor: pointer;
 }
 
+.addToCartBtn:hover{
+  background-color: green;
+}
+
+.removeFromCartBtn:hover{
+  background-color: red;
+}
+
 .products{
   display: flex;
   justify-content: space-evenly;
